--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,5 +19,7 @@ html {
 }
 
 body {
+  background-color: var(--Color-Red);
+  background-image: url(../images/bg-intro-mobile.png);
   font-family: "Poppins", sans-serif;
 }
