--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,9 @@ body {
   align-items: center;
   height: 100vh;
 }
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
