--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,21 @@ body {
 main {
   padding: 0 2.4rem;
 }
+
+.intro-text {
+  color: #ffffff;
+
+  text-align: center;
+  margin-bottom: 6.4rem;
+}
+
+h1 {
+  font-size: 2.8rem;
+  line-height: 3.6rem;
+  margin-bottom: 1.6rem;
+}
+
+.intro-text p {
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+}
