--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,6 @@ main {
 
 .intro-text {
   color: #ffffff;
-
   text-align: center;
   margin-bottom: 6.4rem;
 }
@@ -46,4 +45,24 @@ h1 {
 .intro-text p {
   font-size: 1.6rem;
   line-height: 2.6rem;
+}
+
+.intro-banner {
+  background-color: var(--Color-Blue);
+  color: #fff;
+  text-align: center;
+  box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
+  margin-bottom: 2.4rem;
+  border-radius: 10px;
+  padding: 1.8rem 6.7rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+h2 span {
+  font-weight: 700;
+  line-height: 25px;
 }
